Fixed sidebar overflow

--- a/studyai-app/components/sidebar/notebook_list/notebook_list_styles.module.css
+++ b/studyai-app/components/sidebar/notebook_list/notebook_list_styles.module.css
@@ -5,4 +5,7 @@
     padding-left: 5px;
     padding-right: 5px;
     gap: 5px;
-}
+
+    flex: 1;
+    overflow: scroll;
+ }
