--- a/studyai-app/components/sidebar/sidebar_styles.module.css
+++ b/studyai-app/components/sidebar/sidebar_styles.module.css
@@ -5,7 +5,8 @@
     gap: 10px;
 
     width: 235px;
-    min-height: 100%;
+    height: 100%;
+    
     box-sizing: border-box;
     background-color: var(--primary-gray);
     padding: 20px 10px 20px 10px;
